--- a/response/templates/user-form.html
+++ b/response/templates/user-form.html
@@ -8,11 +8,23 @@
     <link rel="stylesheet" href="/public/css/index.css">
 </head>
 <body>
-    <form method="POST" action="/user/add">
+    <form method="POST" action="/user/login">
         <label for="fname">First name:</label><br>
         <input type="text" id="fname" name="fname" value=""><br>
+
         <label for="lname">Last name:</label><br>
-        <input type="text" id="lname" name="lname" value=""><br><br>
+        <input type="text" id="lname" name="lname" value=""><br>
+
+        <label for="lname">Contact:</label><br>
+        <input type="number" id="contact" name="contact" value=""><br>
+
+        <label for="lname">Address:</label><br>
+        <input type="text" id="address" name="address" value=""><br>
+
+        <label for="lname">Set Password:</label><br>
+        <input type="password" id="password" name="password" value=""><br><br>
+
+
         <input type="submit" value="Submit">
     </form> 
 </body>
